[project]
name = "streamlit-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair==5.5.0",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "arxiv>=2.2.0",
    "attrs==25.3.0",
    "blinker==1.9.0",
    "cachetools==5.5.2",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "distro==1.9.0",
    "et-xmlfile==2.0.0",
    "fastapi==0.115.12",
    "fastapi-mcp>=0.3.7",
    "flagembedding>=1.3.5",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "greenlet==3.2.2",
    "groq==0.25.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "jinja2==3.1.6",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2025.4.1",
    "langchain==0.3.25",
    "langchain-community>=0.3.24",
    "langchain-core==0.3.60",
    "langchain-elasticsearch>=0.3.2",
    "langchain-groq==0.3.2",
    "langchain-mcp-adapters>=0.1.7",
    "langchain-ollama>=0.3.3",
    "langchain-tavily>=0.2.3",
    "langchain-text-splitters==0.3.8",
    "langgraph==0.4.5",
    "langgraph-checkpoint==2.0.26",
    "langgraph-prebuilt==0.1.8",
    "langgraph-sdk==0.1.69",
    "langsmith==0.3.42",
    "markdown>=3.8",
    "markupsafe==3.0.2",
    "narwhals==1.37.1",
    "numpy==2.2.5",
    "opencv-python>=4.11.0.86",
    "openpyxl==3.1.5",
    "orjson==3.10.18",
    "ormsgpack==1.9.1",
    "packaging==24.2",
    "pandas==2.2.3",
    "pillow==11.2.1",
    "protobuf==6.30.2",
    "pyarrow==20.0.0",
    "pydantic==2.11.4",
    "pydantic-core==2.33.2",
    "pydeck==0.9.1",
    "python-dateutil==2.9.0.post0",
    "python-decouple==3.8",
    "python-dotenv==1.1.0",
    "python-json-logger>=3.3.0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "referencing==0.36.2",
    "requests==2.32.3",
    "requests-toolbelt==1.0.0",
    "rpds-py==0.24.0",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.41",
    "sseclient>=0.0.27",
    "starlette==0.46.2",
    "streamlit==1.45.0",
    "streamlit-aggrid==1.1.4.post1",
    "streamlit-lottie==0.0.5",
    "streamlit-on-hover-tabs==1.0.1",
    "tenacity==9.1.2",
    "toml==0.10.2",
    "torch>=2.7.1",
    "tornado==6.4.2",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.0",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "uvicorn==0.34.2",
    "watchdog==6.0.0",
    "wikipedia>=1.4.0",
    "xxhash==3.5.0",
    "zstandard==0.23.0",
]
